--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -251,6 +251,23 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 
 # ===========  end of items for agent scheduler extension =====
 
+# =========== items for l3 extension ==============
+# Enable the High Availibility for virtual routers. A HA router scheduler has
+# to be used.
+# l3_ha = False
+#
+# Maximum number of l3 agents which an HA router will be scheduled on. If it
+# is not set the router will be scheduled on every agent.
+# max_l3_agents_per_router = 2
+#
+# Minimum number of l3 agents which an HA router will be scheduled on. If it
+# is not set the minimum will be 2.
+# min_l3_agents_per_router = 2
+#
+# CIDR of the administrative network used by the l3 if the mode HA is enabled
+# l3_ha_net_cidr = 169.254.0.0/16
+# =========== end of items for l3 extension =======
+
 # =========== WSGI parameters related to the API server ==============
 # Number of separate worker processes to spawn.  The default, 0, runs the
 # worker thread in the current process.  Greater than 0 launches that number of
