--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -232,6 +232,8 @@ notification_driver = neutron.openstack.common.notifier.rpc_notifier
 # Driver to use for scheduling network to DHCP agent
 # network_scheduler_driver = neutron.scheduler.dhcp_agent_scheduler.ChanceScheduler
 # Driver to use for scheduling router to a default L3 agent
+# neutron.scheduler.l3_agent_scheduler.ChanceScheduler, to use L3 agent with HA
+# mode the following scheduler has to be used : neutron.scheduler.l3_agent_scheduler.HARouterScheduler
 # router_scheduler_driver = neutron.scheduler.l3_agent_scheduler.ChanceScheduler
 # Driver to use for scheduling a loadbalancer pool to an lbaas agent
 # loadbalancer_pool_scheduler_driver = neutron.services.loadbalancer.agent_scheduler.ChanceScheduler
