Add HA support to the l3 agent
This patch is a part of the blueprint l3-high-availability

Unit test will have to be improved.

Change-Id: I83f2a5d2af42164c42773b385ba7b00872eed54e

--- a/etc/l3_agent.ini
+++ b/etc/l3_agent.ini
@@ -77,3 +77,28 @@
 # Timeout for ovs-vsctl commands.
 # If the timeout expires, ovs commands will fail with ALARMCLOCK error.
 # ovs_vsctl_timeout = 10
+
+# Location to store keepalived and all HA configurations
+# ha_confs_path = $state_path/ha_confs
+
+# VRRP authentication type AH/PASS
+# ha_vrrp_auth_type = PASS
+
+# VRRP authentication password
+# ha_vrrp_auth_password =
+
+# A list of email accounts that will receive the notification mail
+# when the state changes
+# ha_notification_emails =
+
+# Email to use when processing MAIL FROM: SMTP command
+# ha_notification_from =
+
+# Remote SMTP server to use for sending mail notification
+# ha_smtp_server =
+
+# Timeout for SMTP stream processing
+# ha_smtp_timeout = 10
+
+# The advertisement interval in seconds
+# ha_vrrp_advert_int = 2
