Add L3 VRRP HA base classes
This patch is a part of the blueprint l3-high-availability

This patch initiates the blueprint by adding base classes
on the plugin side.

A new admin-only ha attribute is added
to the API router resource.
Convertion from or to HA router is possible.

DocImpact

Partially-implements: blueprint l3-high-availability

Change-Id: I9d935cf5e0c231e8cb7af5f61b9a9fc552c3521e

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -145,6 +145,23 @@ lock_path = $state_path/lock
 
 # ===========  end of items for agent scheduler extension =====
 
+# =========== items for l3 extension ==============
+# Enable the High Availibility for virtual routers. A HA router scheduler has
+# to be used.
+# l3_ha = False
+#
+# Maximum number of l3 agents which a HA router will be scheduled on. If it
+# is to 0 the router will be scheduled on every agent.
+# max_l3_agents_per_router = 2
+#
+# Minimum number of l3 agents which an HA router will be scheduled on. the
+# default value is 2.
+# min_l3_agents_per_router = 2
+#
+# CIDR of the administrative network used by the l3 if the mode HA is enabled
+# l3_ha_net_cidr = 169.254.0.0/16
+# =========== end of items for l3 extension =======
+
 # =========== WSGI parameters related to the API server ==============
 # Number of separate worker processes to spawn.  The default, 0, runs the
 # worker thread in the current process.  Greater than 0 launches that number of
