Add base classes for port_metering
This feature has to be enabled by
editing the neutron.conf, group port_metering

Change-Id: I4f3a43b4b82a226fd77cdcb99e2e37e5dc7933dc

--- a/etc/neutron.conf
+++ b/etc/neutron.conf
@@ -579,3 +579,12 @@ service_provider=VPN:openswan:neutron.services.vpn.service_drivers.ipsec.IPsecVP
 # service_provider=LOADBALANCER:Embrane:neutron.services.loadbalancer.drivers.embrane.driver.EmbraneLbaas:default
 # Uncomment the following line to test the LBaaS v2 API _WITHOUT_ a real backend
 # service_provider = LOADBALANCER:LoggingNoop:neutron.services.loadbalancer.drivers.logging_noop.driver.LoggingNoopLoadBalancerDriver:default
+#
+[port_metering]
+# enable_port_metering = False
+
+# Interval between two metering measures
+# measure_interval = 30
+
+# Interval between two metering reports
+# report_interval = 60
